1) Fix environment variables for CI

--- a/.github/workflows/running_tests.yml
+++ b/.github/workflows/running_tests.yml
@@ -12,15 +12,7 @@ jobs:
 
       - name: Build & run containers
         id: tests
-        run: docker compose up --build -d mongo1 mongo2 redis
-        env:
-          DB_NAME: test
-          DB_USER: root
-          DB_PASSWORD: test
-          DB_PORT: 27017
-
-          IN_MEMORY_STORAGE_PORT: 6379
-          IN_MEMORY_STORAGE_PASSWORD: test
+        run: cp ./.env.example .env && docker compose up --build -d mongo1 mongo2 redis
 
       - name: Set up Go
         uses: actions/setup-go@v3
@@ -40,12 +32,6 @@ jobs:
 
       - name: Run tests
         run: |
-          sudo printf "\n127.0.0.1 mongo1\n127.0.0.1 mongo2\n" | sudo tee -a /etc/hosts && go test -v -p 1 ./...
-        env:
-          DB_NAME: test
-          DB_USER: root
-          DB_PASSWORD: test
-          DB_PORT: 27017
-
-          IN_MEMORY_STORAGE_PORT: 6379
-          IN_MEMORY_STORAGE_PASSWORD: test
+          sudo printf "\n127.0.0.1 mongo1\n127.0.0.1 mongo2\n" | sudo tee -a /etc/hosts && \
+          cp ./.env.example .env && \
+          go test -v -p 1 ./...
