1) Fix envs vars for CI

--- a/.github/workflows/running_tests.yml
+++ b/.github/workflows/running_tests.yml
@@ -12,7 +12,7 @@ jobs:
 
       - name: Build & run containers
         id: tests
-        run: docker compose up --build -d mongo1 mongo2 redis
+        run: cp ./.env.example .env && docker compose up --build -d mongo1 mongo2 redis
         env:
           DB_NAME: test
           DB_USER: root
