1) Add comment for email credentials for the future;

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ DB_PASSWORD=test
 DB_ROOT_PASSWORD=test123
 DB_PORT=27017
 
+
+# TODO: investigate more secure and more general way of providing credentials for mailing agent
 # EMAIL MANAGEMENT
 SMTP_HOST=smtp.company.com
 SMTP_PORT=587
