--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,9 @@
 server {
     listen 80;
 
+    set_real_ip_from  nginx;
+    real_ip_header X-Real-IP;
+
     location /api {
         proxy_pass http://app:8090;
     }
