--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,10 @@
 server {
     listen 80;
 
-    set_real_ip_from  nginx;
-    real_ip_header X-Real-IP;
-
     location /api {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # TODO: Add request ID header from external systems for traceability
+
         proxy_pass http://app:8090;
     }
 
