--- a/.github/workflows/running_tests.yml
+++ b/.github/workflows/running_tests.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Run tests
         run: |
           sudo printf "\n127.0.0.1 mongo1\n127.0.0.1 mongo2\n" | sudo tee -a /etc/hosts && \
-          go test -p 1 ./...
+          go test -p 1 -count=3 -race ./...
         env:
           DB_NAME: test
           DB_USER: root
